[package]
name = "aoc"
version = "0.6.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id_tree = "1.8.0"
pico-args = "0.5.0"
regex = "1.7.0"
